--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             Unlock Pro
                         </a>
 
-                        <a class="log btn">
+                        <a href="./login.html" class="log btn">
                             <p class="text">Đăng nhập</p>
                         </a>
                     </div>
