--- a/login.html
+++ b/login.html
@@ -4,10 +4,6 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
-        rel="stylesheet"
-        />
-        <link
         rel="stylesheet"
         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         />
@@ -75,13 +71,14 @@
                             Unlock Pro
                         </a>
 
-                        <a class="log btn">
+                        <a class="log btn" href="#">
                             <p class="text">Đăng nhập</p>
                         </a>
                     </div>
                 </nav>
             </div>
         </header>
+        
         <div class="sign">
             <div class="wrap">
                 <form action=""> 
@@ -100,7 +97,7 @@
                         <a href="#">Quên mật khẩu?</a>
                     </div>
                     <div class="submit">
-                        <button type="submit" class="btn">Đăng nhập</button>
+                        <button type="submit" class="log-btn">Đăng nhập</button>
                     </div>
                 </form>
                 <div class="loginwith">
@@ -109,7 +106,7 @@
                 <div class="gg">
                     <button class="signup-social">
                         <div class="logo-wrapper">
-                            <img src="https://developers.google.com/identity/images/g-logo.png">
+                            <img src="https://developers.google.com/identity/images/g-logo.png" alt="Logo">
                         </div>
                         <span class="signup-social-text">Đăng nhập bằng Google</span>
                         
